--- a/plots.ipynb
+++ b/plots.ipynb
@@ -59,7 +59,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "FILEPATH = \"saved\\\\Pisa_2000_40_3_MCS\\\\Outputs\""
+    "FILEPATH = \"saved\\\\Pamplona_500_50_5_MCS\\\\Outputs\""
    ]
   },
   {
@@ -103,7 +103,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "FILEPATH = \"saved\\\\Pisa_2000_40_3_MCS\\\\Users\""
+    "FILEPATH = \"saved\\\\Pamplona_500_50_5_MCS\\\\Users\""
    ]
   },
   {
@@ -123,7 +123,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "loc = df[df.user_id==4].filter([\"lat\", \"lon\"]).values.tolist()"
+    "loc = df[df.user_id==8].filter([\"lat\", \"lon\"]).values.tolist()"
    ]
   },
   {
@@ -133,13 +133,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "m = fl.Map(location=(df.filter([\"lat\",\"lon\"]).loc[0]), zoom_start = 15)\n",
+    "m = fl.Map(location=(df.filter([\"lat\",\"lon\"]).loc[0]), zoom_start = 14)\n",
     "fl.PolyLine(loc, color='red', weight=4, opacity=0.8).add_to(m)\n",
     "fl.Marker(location=[loc[0][0], loc[0][1]],popup=\"start\").add_to(m)\n",
     "fl.Marker(location=[loc[len(loc)-1][0], loc[len(loc)-1][1]],popup=\"stop\").add_to(m)\n",
     "# Show and save the map\n",
-    "m\n",
-    "m.save(\"Pisa\" + '.jpg')"
+    "m"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "55e27bfa-7e07-4d09-9f15-3c0d7e57e97c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "m.save(\"Pamplona\" + '.jpg')"
    ]
   },
   {
@@ -159,6 +168,14 @@
     "    os.makedirs(\"images/\", exist_ok=True)\n",
     "    os.system(\"mv *.jpg images/\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "04378f99-62f7-486e-ac2c-3234cc28f777",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
