--- a/plots.ipynb
+++ b/plots.ipynb
@@ -137,7 +137,7 @@
     "fl.PolyLine(loc, color='red', weight=4, opacity=0.8).add_to(m)\n",
     "fl.Marker(location=[loc[0][0], loc[0][1]],popup=\"start\").add_to(m)\n",
     "fl.Marker(location=[loc[len(loc)-1][0], loc[len(loc)-1][1]],popup=\"stop\").add_to(m)\n",
-    "# Show and save the map\n",
+    "# Show the map\n",
     "m"
    ]
   },
@@ -148,6 +148,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+   "# Save the map\n",
     "m.save(\"Pamplona\" + '.jpg')"
    ]
   },
