--- a/plots.ipynb
+++ b/plots.ipynb
@@ -59,6 +59,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# change the datapath with one of your\n",
     "FILEPATH = \"saved\\\\Pamplona_500_50_5_MCS\\\\Outputs\""
    ]
   },
@@ -103,6 +104,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+   "# change the datapath with one of your\n",
     "FILEPATH = \"saved\\\\Pamplona_500_50_5_MCS\\\\Users\""
    ]
   },
